# agentic-invoice-processing

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/agent/: conversation.py  orchestrator.py  prompts.py
app/agent/tools/: extraction.py  math_tool.py  persistence.py
app/api/: chat.py  health.py
app/schemas/: decision.py  purchase_order.py
app/services/: pdf_service.py
app/static/: index.html
backend/: .dockerignore  .env.example  Dockerfile  README.md
backend/alembic/versions/: 0001_initial.py  0002_uploads.py
backend/app/: config.py  main.py
backend/app/agent/: conversation.py  mcp_tools.py  orchestrator.py  prompts.py
backend/app/api/: chat.py  health.py  reports.py
backend/tests/: conftest.py  support.py
data/: po_vendors_data.csv  purchase_order_line_items_data.csv  purchase_orders_data.csv
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
specs/001-agentic-invoice-strands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-read-reporting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: support.py
tests/integration/: test_chat_stream.py  test_decision_trace.py
tests/unit/: test_extraction_service.py  test_pdf_service.py  test_schemas.py  test_seed.py  test_tools.py
tools-mcp/: Dockerfile  README.md  calc.py  db.py  extraction.py  models.py  repo.py  requirements.txt  schemas.py  server.py
(+44 files in other folders)
